bug fixed, contact form was covered by another div

--- a/apps/profile/stylesheets/index.styl
+++ b/apps/profile/stylesheets/index.styl
@@ -155,11 +155,7 @@
       height 380px
       position absolute
       bottom 0
-    .envelop-front
-      width 780px
-      height 380px
-      position absolute
-      bottom 0
+      z-index 996
     .paper
       width 680px
       height 680px
@@ -167,7 +163,21 @@
       left 50px
       top 0
       background-color $white
+      z-index 997
+    .envelop-front
+      width 780px
+      height 380px
+      position absolute
+      bottom 0
+      z-index 999
+    .form-block
+      width 680px
+      height 680px
+      position absolute
+      left 50px
+      top 0
       padding 30px 70px
+      z-index 1000
       .contact-icon
         width 60px
         height 60px
